[minor-fixes] fixed amount bar scroll on mobile devices
[minor-fixes] fixed amount bar scroll on mobile devices

--- a/src/components/pages/Game/styles.css
+++ b/src/components/pages/Game/styles.css
@@ -1,7 +1,7 @@
 .GameContainer {
   width: 100vw;
   height: 100vh;
-  background: #f5f5f7;
+  background: #fff;
   display: flex;
   justify-content: space-between;
   position: relative;
@@ -10,5 +10,6 @@
 @media screen and (max-width: 920px) {
   .GameContainerQuestions {
     width: 100%;
+    padding-top: 40px;
   }
 }
